# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../core/common/dfx/dsoftbus_dfx.gni")
import("../../core/connection/ble/conn_ble.gni")
import("../../core/connection/br/conn_br.gni")
import("../../core/connection/wifi_direct/wifi_direct.gni")
import("../../dsoftbus.gni")

#import("//foundation/communication/dsoftbus/core/connection/common/conn_common.gni")
import("../../core/connection/tcp/conn_tcp.gni")
conn_manager_src = ble_connection_src + br_connection_src + tcp_connection_src +
                   wifi_direct_connection_src
conn_manager_inc = ble_connection_inc + br_connection_inc + tcp_connection_inc +
                   wifi_direct_connection_inc
conn_manager_external_deps =
    wifi_direct_connection_external_deps + ble_connection_external_deps
conn_manager_common_deps = [ "$dsoftbus_dfx_path/log:softbus_dfx_log" ]
conn_manager_common_deps += wifi_direct_connection_common_deps

conn_manager_src +=
    [ "$dsoftbus_root_path/core/connection/manager/softbus_conn_manager.c" ]
conn_manager_inc += [
  "$dsoftbus_root_path/core/connection/manager",
  "$dsoftbus_root_path/core/connection/interface",
  "$dsoftbus_root_path/core/common/include",
  "$dsoftbus_root_path/core/common/dfx/hisysevent_adapter/include",
]
