# Copyright (c) 2021-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../core/connection/ble/conn_ble.gni")
import("../../core/connection/br/conn_br.gni")
import("../../dsoftbus.gni")

import("$dsoftbus_root_path/core/connection/general/general_connection.gni")
import("$dsoftbus_root_path/core/connection/proxy/proxy_connection.gni")

#import("//foundation/communication/dsoftbus/core/connection/common/conn_common.gni")
import("../../core/connection/tcp/conn_tcp.gni")

CONN_SERVER_DEFINES = []
conn_manager_src = ble_connection_src + br_connection_src + tcp_connection_src +
                   general_connection_src + proxy_connection_src
conn_manager_inc = ble_connection_inc + br_connection_inc + tcp_connection_inc +
                   general_connection_inc + proxy_connection_inc
conn_manager_external_deps = ble_connection_external_deps
conn_manager_common_deps = [ "$dsoftbus_dfx_path:softbus_dfx" ]

conn_manager_src += [
  "$dsoftbus_root_path/core/connection/manager/softbus_conn_manager.c",
  "$dsoftbus_root_path/core/connection/manager/softbus_conn_flow_control.c",
  "$dsoftbus_root_path/core/connection/manager/softbus_conn_ipc.c",
]
conn_manager_inc += [
  "$dsoftbus_root_path/interfaces/kits/connection",
  "$dsoftbus_root_path/core/connection/manager",
  "$dsoftbus_root_path/interfaces/kits/connect",
  "$dsoftbus_root_path/core/connection/interface",
  "$dsoftbus_root_path/core/common/include",
  "$dsoftbus_root_path/core/connection/coap/include",
  "$dsoftbus_root_path/core/connection/sle/include",
  "$dsoftbus_root_path/core/connection/ipc/include",
]
if (dsoftbus_feature_conn_tcp_comm) {
  CONN_SERVER_DEFINES += [ "DSOFTBUS_FEATURE_CONN_TCP_COMM" ]
  if (dsoftbus_feature_conn_tcp_proxy) {
    CONN_SERVER_DEFINES += [ "DSOFTBUS_FEATURE_CONN_TCP_PROXY" ]
  }
}
if (dsoftbus_feature_conn_ble) {
  CONN_SERVER_DEFINES += [ "DSOFTBUS_FEATURE_CONN_BLE" ]
}
if (dsoftbus_feature_conn_br) {
  CONN_SERVER_DEFINES += [ "DSOFTBUS_FEATURE_CONN_BR" ]
}

if (dsoftbus_feature_conn_ble_direct) {
  CONN_SERVER_DEFINES += [ "DSOFTBUS_FEATURE_CONN_BLE_DIRECT" ]
}

if (dsoftbus_feature_conn_coc) {
  CONN_SERVER_DEFINES += [ "DSOFTBUS_FEATURE_CONN_COC" ]
}

conn_manager_inc += [ "$dsoftbus_root_path/core/connection/ipc/include" ]
if (defined(ohos_lite)) {
  if (ohos_kernel_type == "liteos_m") {
    conn_manager_src += [ "$dsoftbus_root_path/core/connection/ipc/mini/general_connection_client_proxy.c" ]
  } else {
    conn_manager_src += [ "$dsoftbus_root_path/core/connection/ipc/small/general_connection_client_proxy.c" ]
  }
} else {
  conn_manager_src += [
    "$dsoftbus_root_path/core/connection/ipc/$os_type/src/general_connection_client_proxy.cpp",
    "$dsoftbus_root_path/core/connection/ipc/$os_type/src/general_connection_client_proxy_standard.cpp",
  ]
  conn_manager_inc +=
      [ "$dsoftbus_root_path/core/connection/ipc/$os_type/include" ]
}
