# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../core/discovery/ble/disc_ble.gni")
import("../../core/discovery/coap/disc_coap.gni")
import("../../core/discovery/event_manager/disc_event_manager.gni")
import("../../core/discovery/usb/disc_usb.gni")
import("../../dsoftbus.gni")

DISC_SERVER_DEFINES = []
disc_server_src = []
disc_server_inc = []
disc_server_deps = []
disc_server_external_deps = []

disc_server_inc += [
  "$dsoftbus_root_path/core/discovery/manager/include",
  "$dsoftbus_root_path/core/discovery/interface",
  "$dsoftbus_root_path/core/discovery/coap/interface",
]
disc_server_inc += disc_event_manager_inc
disc_server_src += disc_event_manager_src
disc_server_deps += disc_event_manager_deps
disc_server_src += [
  "$dsoftbus_root_path/core/discovery/manager/src/disc_manager.c",
  "$dsoftbus_root_path/core/discovery/manager/src/softbus_disc_server.c",
]

if (!dsoftbus_feature_ex_kits) {
  DISC_SERVER_DEFINES += [ "DISC_COMMUNITY" ]
}
if (defined(ohos_lite)) {
  if (ohos_kernel_type != "liteos_m") {
    disc_server_deps += [
      "//foundation/communication/ipc/interfaces/innerkits/c/ipc:ipc_single",
    ]
  }
} else {
  disc_server_external_deps += [ "c_utils:utils" ]

  if (support_i18n && qemu_arm_disable) {
    disc_server_external_deps += [ "i18n:intl_util" ]
    disc_server_src += [
      "$dsoftbus_root_path/core/discovery/common/src/locale_config_wrapper.cpp",
    ]
  } else {
    disc_server_src += [ "$dsoftbus_root_path/core/discovery/common/src/locale_config_wrapper_mock.cpp" ]
  }
}

disc_server_src += ble_discovery_src
disc_server_inc += ble_discovery_inc
disc_server_deps += ble_discovery_deps

disc_server_src += disc_coap_src
disc_server_inc += disc_coap_inc
disc_server_deps += disc_coap_deps
disc_server_external_deps += disc_coap_external_deps

disc_server_src += usb_disc_src
disc_server_inc += usb_disc_inc
disc_server_deps += usb_disc_deps
disc_server_external_deps += usb_disc_external_deps
